syntax = "proto3";

package keshavbhattad.proto;

import "memory_message.proto";

option go_package = ".;pb";

message CPU {
    string brand = 1;
    string name = 2;
    uint32 number_of_cores = 3;
    uint32 number_of_threads = 4;
    float min_ghz = 5;
    float max_ghz = 6;
}

message GPU {
    string brand = 1;
    string name = 2;
    double min_ghz = 3;
    double max_ghz = 4;
    Memory mem = 5;
}